Added the extra challenge and made it a nicer looking list

--- a/Week_3/Week_3B/Studenten/Studenten/Views/Student/ZoekStudent.cshtml
+++ b/Week_3/Week_3B/Studenten/Studenten/Views/Student/ZoekStudent.cshtml
@@ -4,8 +4,11 @@
 }
 
 <div class="text-center">
+    <p>De letter die opgezocht is: @ViewData["searchedLetter"]</p>
+    <ul class="list-group">
     @foreach (var student in @Model)
     {
-        <p>@student.StudentNaam</p>
+        <li class="list-group-item">@student.StudentNaam</li>
     }
+    </ul>
 </div>
