Aantal now works, form to add a student now also works

--- a/Week_3/Week_3B/Studenten/Studenten/Views/Student/SuccessFullyAddedStudent.cshtml
+++ b/Week_3/Week_3B/Studenten/Studenten/Views/Student/SuccessFullyAddedStudent.cshtml
@@ -6,10 +6,11 @@
 <div class="text-center">
     <h1>Studenten</h1>
     <ul class="list-group">
+        <p>Successvol de nieuwe student toegevoegd!</p>
+        @Model.Count
         @foreach (var student in @Model)
         {
             <li class="list-group-item">@student.StudentNaam</li>
         }
     </ul>
-    <a href="/Student/CreateStudent">Voeg een nieuwe student toe..</a>
 </div>
