even more stuff

--- a/Week_5/5B/5B/Studenten/Studenten/Views/Shared/_Layout.cshtml
+++ b/Week_5/5B/5B/Studenten/Studenten/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         &copy; 2020 - Studenten - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
     <div class="container">
-        <p> Top 3 beste studenten: </p>
+        <partial name="~/Views/Student/Partials/_TopStudentsPartial.cshtml" />
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
