--- a/Week_5/5B/5B/Studenten/Studenten/Views/Student/CreateStudent.cshtml
+++ b/Week_5/5B/5B/Studenten/Studenten/Views/Student/CreateStudent.cshtml
@@ -5,9 +5,12 @@
 
 <div class="text-center">
     <form method="post" action="/Student/CreateStudent">
-        Naam: <input type="text" name="StudentNaam"/>
-        Nummer: <input type="text" name="StudentNummer"/>
-        Mail: <input type="text" name="StudentMail"/>
-        <input type="submit"/>
+        Naam: <input type="text" name="StudentNaam" />
+        Nummer: <input type="text" name="StudentNummer" />
+        Mail: <input type="text" name="StudentMail" />
+        Telefoonnummer: <input type="text" name="StudentPhonenr" />
+        Leeftijd: <input type="text" name="StudentAge" />
+        Cijfer: <input type="text" name="StudentGrade" />
+        <input type="submit" />
     </form>
 </div>
