--- a/Week_13/Week_13/Views/Home/Index.cshtml
+++ b/Week_13/Week_13/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Sup.</h1>
+    <p><a asp-area="Identity" asp-page="/Account/Login">Login</a></p>
 </div>
