Can now add yourself to role and remove

--- a/Week_13/Week_13/Views/Home/Index.cshtml
+++ b/Week_13/Week_13/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">Sup.</h1>
     <p><a asp-area="Identity" asp-page="/Account/Login">Login</a></p>
+    <a asp-controller="Role" asp-action="Index">Rollen overzicht.</a>
 </div>
